# rvbbit-sql

./: .dockerignore  .gitignore  Cargo.toml  Makefile  PACKAGING.md  README.md  cb-100k.txt  cb-alloy-100k.txt  install.sh  local_rebuild2.sh  local_rebuild3.sh  state-check.yml
.firecrawl/: fletch-github.md  flint-chart-api.md  flint-chart-docs.md  flint-chart-github.md  flint-chart-mcp.md  flint-chart-overview.md  jack-storage-workload-taxonomy.md  nvidia-sirius-clickbench.md  sirius-github.md
.playwright-mcp/: page-2026-06-05T18-48-58-787Z.yml  page-2026-06-05T19-14-45-516Z.yml  untitled-sql.csv
artifacts/: aa-datamarket-operating-pulse-20260630-221255-local-render.html  aa-datamarket-operating-pulse-20260630-221255-query-results.json  aa-datamarket-operating-pulse-20260630-221255.html  rvbbit-flint-chart-poc-20260701-024004-local-render.html  rvbbit-flint-chart-poc-20260701-024004-manifest.json  rvbbit-flint-chart-poc-20260701-024004-query-results.json  rvbbit-flint-chart-poc-20260701-024004.html
bench/: BENCHMARK_HISTORY.md  bigfoot_bench.py  build_combined_rvbbit_route_profile.sh  e2e_realworld.py  pyproject.toml  rebuild_rvbbit_route_training.sh  record_benchmark_run.py  run.py  rvbbit_duck_hot.py  rvbbit_explain_route.py  rvbbit_route_README.md  rvbbit_route_eval.py  rvbbit_route_load_profile.py  rvbbit_route_merge.py  rvbbit_route_model.py  rvbbit_route_profile.json  rvbbit_route_profile_admin.py  rvbbit_route_train.py  verify_vortex_filter.py
capabilities/: README.md  catalog.json
crates/pg_rvbbit/: Cargo.toml  pg_rvbbit.control
crates/pg_rvbbit/sql/: catalog_drift.sql  catalog_kg.sql  generic_search.sql  hindsight.sql  migrate.sql  model_orchestration.sql  model_studio.sql  pg_rvbbit--0.1.0--0.2.0.sql  pg_rvbbit--0.10.0--0.11.0.sql  pg_rvbbit--0.11.0--0.12.0.sql  pg_rvbbit--0.12.0--0.13.0.sql  pg_rvbbit--0.13.0--0.14.0.sql  pg_rvbbit--0.14.0--0.15.0.sql  pg_rvbbit--0.15.0--0.16.0.sql  pg_rvbbit--0.16.0--0.17.0.sql  pg_rvbbit--0.17.0--0.18.0.sql  pg_rvbbit--0.18.0--0.19.0.sql  pg_rvbbit--0.19.0--0.20.0.sql  pg_rvbbit--0.2.0--0.3.0.sql  pg_rvbbit--0.20.0--0.21.0.sql  pg_rvbbit--0.21.0--0.22.0.sql  pg_rvbbit--0.22.0--0.23.0.sql  pg_rvbbit--0.23.0--0.24.0.sql  pg_rvbbit--0.24.0--0.25.0.sql  pg_rvbbit--0.25.0--0.26.0.sql  pg_rvbbit--0.26.0--0.27.0.sql  pg_rvbbit--0.27.0--0.28.0.sql  pg_rvbbit--0.28.0--0.29.0.sql  pg_rvbbit--0.29.0--0.30.0.sql  pg_rvbbit--0.3.0--0.4.0.sql  pg_rvbbit--0.30.0--0.31.0.sql  pg_rvbbit--0.31.0--0.32.0.sql  pg_rvbbit--0.32.0--0.33.0.sql  pg_rvbbit--0.33.0--0.34.0.sql  pg_rvbbit--0.34.0--0.35.0.sql  pg_rvbbit--0.35.0--0.36.0.sql  pg_rvbbit--0.36.0--0.37.0.sql  pg_rvbbit--0.37.0--0.38.0.sql  pg_rvbbit--0.38.0--0.39.0.sql  pg_rvbbit--0.39.0--0.40.0.sql  (+197 more)
crates/pg_rvbbit/sql/migrations/: 0001_durable_catalog_crawl.sql  0002_default_embedder.sql  0003_parallel_catalog_crawl.sql  0004_cubes.sql  0005_cubes_enrich.sql  0006_cubes_v3.sql  0007_cubes_sql_trim.sql  0008_proposals.sql  0009_cube_model.sql  0010_metric_proposals.sql  0011_near_frontier_proposals.sql  0012_semantic_model.sql  0013_proposal_lifecycle.sql  0014_materialize_all_metrics.sql  0015_proposal_exemplars.sql  0016_activity_discovery.sql  0017_usage_weighted_search.sql  0018_proposal_quality.sql  0019_metric_check_resilience.sql  0020_proposal_categories.sql  0021_edit_primitives.sql  0022_cube_categories.sql  0023_propose_column_profile.sql  0024_metric_lineage_breaching.sql  0025_fk_inference.sql  0026_refresh_all_cubes.sql  0027_dimensional_metrics.sql  0028_drop_stale_overloads.sql  0029_cube_refresh_pacing_and_accel_exclude.sql  0030_fix_refresh_all_cubes_overload.sql  0031_brain_phase0.sql  0032_batch_embed_crawl_prewarm.sql  0033_crawl_exclude_operational_schemas.sql  0034_brain_acl_management.sql  0035_fast_fingerprint_materialize_sample.sql  0036_fingerprint_reltuples_rowcount.sql  0037_fingerprint_always_materialize.sql  0038_fingerprint_force_heap_scan.sql  0039_route_overlay.sql  0040_route_optimization_candidates.sql  (+169 more)
crates/pg_rvbbit/src/: bitmap.rs  brain.rs  cache.rs  capability_catalog_seed.json  capsule.rs  catalog.rs  catalog_drift.rs  catalog_kg.rs  catcher.rs  cluster.rs  code_steps.rs  columnar_cache.rs  compact.rs  composites.rs  costs.rs  custom_scan.rs  delete_log.rs  df.rs  duck_backend.rs  duck_telemetry.rs  embeddings.rs  engine_rows.rs  evidence.rs  explain.rs  fast_hash.rs  flow.rs  freshness.rs  generic_search.rs  hindsight.rs  kg.rs  lance.rs  lib.rs  live_counters.rs  migrations.rs  model_orchestration.rs  model_studio.rs  mv.rs  operators.rs  pg_context.rs  pgvector_tier.rs  (+26 more)
crates/pg_rvbbit/src/mcp/: mod.rs
crates/pg_rvbbit/src/specialists/: anthropic.rs  gemini.rs  gradio.rs  local_embed.rs  mod.rs  native.rs  openai.rs  openai_chat.rs  stub.rs
crates/rvbbit_duck/: Cargo.toml
crates/rvbbit_duck/src/: main.rs
crates/rvbbit_hutch/: Cargo.toml  hutch.clover.example.yaml  hutch.example.yaml  tenants.example.yaml
crates/rvbbit_hutch/src/: config.rs  error.rs  lanes.rs  main.rs  meter.rs  polar.rs  proxy.rs  tenants.rs
crates/rvbbit_storage/: Cargo.toml
crates/rvbbit_storage/src/: delete_log.rs  hll.rs  lib.rs  metadata.rs  row_group.rs
docker/: Dockerfile.bench  Dockerfile.rvbbit  Dockerfile.rvbbit-gqe  Dockerfile.rvbbit-gqe-refresh  Dockerfile.rvbbit-gqe-runtime  Dockerfile.rvbbit-hare  Dockerfile.rvbbit-hutch  Dockerfile.warren-agent  docker-compose.competitors.yml  docker-compose.gpu.yml  docker-compose.gqe-host.yml  docker-compose.gqe-image.yml  docker-compose.override.yml  docker-compose.release-gqe.yml  docker-compose.release.yml  docker-compose.sidecars.yml  docker-compose.uber.yml  docker-compose.yml  hutch-compose.yml
docs/: ACCELERATOR_FRESHNESS_PLAN.md  ACCEPTANCE_HARNESS.md  ALERTS_PLAN.md  BEAVERDAM_RENAME_PLAN.md  BIGFOOT-DEMO.md  BURROW_PLAN.md  CALLABLE_SURFACES.md  CAPABILITIES.md  CAPABILITY_KG_PLAN.md  CATALOG_KG_PHASE4_PLUS.md  CATALOG_KG_PLAN.md  CLOVER_MODEL_OPERATOR_AUDIT.md  COSTS_AND_RECEIPTS.md  COSTS_UI_CONTRACT.md  CUBES_PLAN.md  DASHBOARDS_PLAN.md  (+55 more)
warren/agent/: Cargo.toml
warren/agent/src/: main.rs
(+399 files in other folders)
