[package]
name = "rvbbit_duck"
version = "3.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Rvbbit contributors"]

[workspace]

[[bin]]
name = "rvbbit-duck"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arrow-flight = { version = "58.3.0", features = ["flight-sql-experimental"] }
async-trait = "0.1"
datafusion = "53.1.0"
datafusion-substrait = "53.1.0"
duckdb = { version = "1.10502.0", features = ["parquet"] }
futures = "0.3"
parquet = "58.3.0"
postgres = "0.19"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = "0.14"
