[package]
name = "rvbbit_storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true, features = ["zstd"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = "3"
